# Compiler

./: .gitignore  AST.c  AST.h  CMakeLists.txt  Makefile  lexical.l  main.c  readme.md  syntax.y
AST/: AST.c  CMakeLists.txt
IR/: CMakeLists.txt  Compile.c  Compile.h  IR.c  IR.h
MIPS/: CMakeLists.txt  Morph.c  Morph.h  Optimize.c  Optimize.h
ParseTree/: CMakeLists.txt  ParseTree.c  ParseTree.h
SymbolTable/: CMakeLists.txt  Environment.c  Environment.h  RBTree.c  RBTree.h  SymbolTable.c  SymbolTable.h  SymbolTable_private.h
deploy/: deploy.py
utils/: CMakeLists.txt  utils.c  utils.h
